# starshield-lite

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.py  dashboard.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements-docker.txt  requirements.txt  ruff.toml  setup.cfg  starshield_dash.py  tui.py
.github/workflows/: ci.yml
api/: __init__.py  client.py  dependencies.py  main.py  rate_limit.py  security.py
api/routers/: debris.py  export.py  health.py  history.py  objects.py  passes.py  watchlist.py
api/schemas/: __init__.py  common.py  history.py  objects.py  passes.py  watchlist.py
core/: __init__.py  predictor.py  propagator.py  simulator.py  starmap.py  tle_fetcher.py  visualizer.py
demo/: demo.md  demo.py
docs/: ARCHITECTURE.md  DOCKER.md  README.md  USAGE.md
docs/ci/: github-actions-ci.yml
examples/: README.md  call_api_client.py  custom_watchlist.py  demo.py  demo_workflow.py  programmatic_export.py
services/: __init__.py  database.py  debris.py  export.py  notifications.py  object_index.py  observers.py  pass_quality.py  scheduler.py  sky.py  visualization.py  watchlist.py
tests/: test_api.py  test_api_auth.py  test_basic.py  test_database.py  test_debris.py  test_export.py  test_notifications.py  test_object_index.py  test_pass_quality.py  test_rate_limit.py  test_scheduler.py  test_visualization.py  test_watchlist.py
utils/: __init__.py  alerts.py  immutable_log.py
