[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starshield-lite"
version = "0.2.0"
description = "Personal space domain awareness console — passes, starmap, conjunctions, API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "StarShield Lite contributors" }]
keywords = [
  "satellites",
  "orbital",
  "astronomy",
  "skyfield",
  "conjunction",
  "fastapi",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "skyfield>=1.46",
  "sgp4>=2.22",
  "numpy>=1.22",
  "pandas>=1.5",
  "requests>=2.28",
  "rich>=13.0",
  "python-dotenv>=1.0",
  "fire>=0.5",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.0",
  "plotly>=5.18",
  "apscheduler>=3.10",
  "textual>=0.47",
  "streamlit>=1.28",
]

[project.optional-dependencies]
pdf = ["fpdf2>=2.7"]
maps = ["matplotlib>=3.7", "cartopy>=0.22"]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "httpx>=0.27",
]
full = [
  "starshield-lite[pdf,maps,dev]",
]

[project.urls]
Homepage = "https://github.com/Sudo-Stein/starshield-lite"
Documentation = "https://github.com/Sudo-Stein/starshield-lite#readme"
Issues = "https://github.com/Sudo-Stein/starshield-lite/issues"

[project.scripts]
starshield = "main:cli_main"
starshield-api = "api.main:main"
starshield-dash = "starshield_dash:main"
starshield-tui = "tui:run_tui"

[tool.setuptools]
py-modules = ["main", "config", "dashboard", "tui", "starshield_dash"]

[tool.setuptools.packages.find]
include = ["api*", "core*", "services*", "utils*"]
exclude = ["tests*", "docs*", "data*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
