# Compatibility shim for older pip / setuptools editable installs.
# Primary metadata lives in pyproject.toml.

[metadata]
name = starshield-lite
version = 0.2.0

[options]
python_requires = >=3.9
packages = find:
py_modules =
    main
    config
    dashboard
    tui
    starshield_dash

[options.packages.find]
include =
    api*
    core*
    services*
    utils*
exclude =
    tests*
    docs*
    data*
    examples*

[options.entry_points]
console_scripts =
    starshield = main:cli_main
    starshield-api = api.main:main
    starshield-dash = starshield_dash:main
    starshield-tui = tui:run_tui
